cluster/apps/media/sonarr/networkpolicies/envoy-gateway-egress-sonarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-sonarr
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-external
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app: sonarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
